Fix: add rewrite for index.html

--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,7 @@
     { "src": "api/upload.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/api/upload", "dest": "api/upload.py" }
+    { "src": "/api/upload", "dest": "api/upload.py" },
+    { "src": "/", "dest": "/index.html" }
   ]
 }
