--- a/vercel.json
+++ b/vercel.json
@@ -1,10 +1,10 @@
 {
   "version": 2,
+  "public": "public",
   "builds": [
     { "src": "api/upload.py", "use": "@vercel/python" }
   ],
   "routes": [
-    { "src": "/api/upload", "dest": "api/upload.py" },
-    { "src": "/", "dest": "/index.html" }
+    { "src": "/api/upload", "dest": "api/upload.py" }
   ]
 }
