--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,6 @@
   ],
   "routes": [
     { "src": "/api/upload", "dest": "api/upload.py" },
-    { "handle": "filesystem" },
-    { "src": "/.*", "dest": "/index.html" }
+    { "src": "/(.*)", "dest": "/index.html" }
   ]
 }
